--- a/src/components/Banner.scss
+++ b/src/components/Banner.scss
@@ -1,60 +1,110 @@
 @import '../variables.scss';
 @import '~bootstrap/scss/bootstrap-grid.scss';
 
+@keyframes scroll-wheel {
+  0% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(35px);
+  }
+}
+
+@keyframes scroll-text {
+  0% {
+    transform: translateX(0px);
+  }
+  100% {
+    transform: translateX(3px);
+  }
+}
+
 #banner {
-    height: 100%;
-    background-color: $primary-color;
-  
-    #banner-portrait-container {
-      @include media-breakpoint-up(lg) {
-        text-align: left;
-      }
-  
-      @include media-breakpoint-down(md) {
-        text-align: center;
-      }
-  
-      position:absolute;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-  
-      img {
-        @include media-breakpoint-up(lg) {
-          height: 90vh;
-        }
-  
-        @include media-breakpoint-down(md) {
-          width: 75%;
-        }
-      }
+  height: 100%;
+  background-color: $primary-color;
+
+  #banner-portrait-container {
+    @include media-breakpoint-up(lg) {
+      text-align: left;
     }
-  
-    #banner-text > div {
+
+    @include media-breakpoint-down(md) {
+      text-align: center;
+    }
+
+    position:absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+
+    img {
       @include media-breakpoint-up(lg) {
-        position: absolute;
-        right: 5%;
-        text-align: right;
-        width: 50vw;
-        top: 50%;
-        transform: translateY(-50%);
+        height: 90vh;
       }
-  
+
       @include media-breakpoint-down(md) {
-        text-align: center;
-        width: 100vw;
-        margin-top: 5%;
-      }
-  
-      h1 {
-        color: $secondary-color;
-        font-family: 'Permanent Marker';
-        font-size: 5rem;
-      }
-  
-      h2 {
-        color: lighten($secondary-color, 8);
-        font-size: 2.4rem;
+        width: 75%;
       }
     }
   }
+
+  #banner-text > div {
+    @include media-breakpoint-up(lg) {
+      position: absolute;
+      right: 5%;
+      text-align: right;
+      width: 50vw;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+
+    @include media-breakpoint-down(md) {
+      text-align: center;
+      width: 100vw;
+      margin-top: 5%;
+    }
+
+    h1 {
+      color: $secondary-color;
+      font-family: 'Permanent Marker';
+      font-size: 5rem;
+    }
+
+    h2 {
+      color: lighten($secondary-color, 8);
+      font-size: 2.4rem;
+    }
+  }
+
+  #scroll-indicator {
+    width: fit-content;
+    position: absolute;
+    bottom: 3%;
+    right: 5%;
+
+    & > svg {
+      fill-rule: evenodd;
+      clip-rule: evenodd;
+      stroke-linecap: round;
+      stroke-linejoin: round;
+      stroke-miterlimit: 1.5;
+    
+      & > * {
+        fill: none;
+        stroke: darken(white, 3%);
+        stroke-width: 30px;
+      }
+
+      & > #wheel {
+        animation: scroll-wheel ease 1.5s infinite;
+      }
+    }
+    
+    & > span {
+      font-size: 0.90rem;
+      color: darken(white, 3%);
+      padding-left: 8px;
+      animation: scroll-text ease 1.5s infinite alternate;
+    }
+  }
+}
