--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,11 @@
   src: url("fonts/Lato-Regular.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: 'Alfa Slab One';
+  src: url("fonts/AlfaSlabOne-Regular.ttf") format("truetype");
+}
+
 body {
   height: 100vh;
   overflow: hidden;
