--- a/src/components/Experience.scss
+++ b/src/components/Experience.scss
@@ -3,35 +3,8 @@
 .timeline {
     display: inline-block;
     color: $secondary-color-light;
-    width: 100vw;
-
-    & > .left-container {
-        position: relative;
-        width: 100%;
-        height: 100px;
-        border-bottom: 1px solid mix($secondary-color-light, $secondary-color, 25);
-
-        &::after {
-            position: absolute;
-            bottom: -5px;
-            left: 5%;
-            content: "";
-            width: 10px;
-            height: 10px;
-            background-color: $secondary-color-light;
-        }
-
-        & > .date {
-            display: inline-block;
-            margin-top: 2%;
-            margin-left: 5%;
-            transform: rotate(-45deg);
-        }
-
-        & > a > img {
-            height: 60%;
-        }
-    }
+    width: 100%;
+    height: 100vh;
 
     & > .details {
         position: relative;
