--- a/src/components/Resume.scss
+++ b/src/components/Resume.scss
@@ -1,12 +1,31 @@
 @import '../variables.scss';
 
 #resume {
-    overflow-x: auto;
-    height: 100vh;
-    padding: 3% 0% 3% 5%;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    padding: 3% 0% 3% 0%;
+
+    & > #left-container {
+        min-width: fit-content;
+
+        & > h1[id$="-date"] {
+            font-family: "Alfa Slab One";
+            font-size: 4rem;
+            color: transparent;
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: $secondary-color-light;
+
+            & > span {
+                display: inline-block;
+            }
+        }
+    }
 
     & > #experience-container {
+        overflow-x: hidden;
+        overflow-y: scroll;
         height: 100vh;
-        width: 200vw;
+        padding-left: 25px;
     }
 }
