--- a/src/components/Resume.scss
+++ b/src/components/Resume.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: row;
     overflow: hidden;
-    padding: 3% 0% 3% 0%;
+    padding: 3%;
 
     & > #left-container {
         min-width: fit-content;
